Test Beamer (works), which template to use?

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,13 @@
-\documentclass{article}
+\documentclass{beamer}
 
 \begin{document}
-Hello world!
+  \begin{frame}
+    \frametitle{This is the first slide}
+    %Content goes here
+  \end{frame}
+  \begin{frame}
+    \frametitle{This is the second slide}
+    \framesubtitle{A bit more information about this}
+    %More content goes here
+  \end{frame}
 \end{document}
