--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,6 @@
 \documentclass{beamer}
 
 \begin{document}
-  \begin{frame}
-    \frametitle{This is the first slide}
-    %Content goes here
-  \end{frame}
-  \begin{frame}
-    \frametitle{This is the second slide}
-    \framesubtitle{A bit more information about this}
-    %More content goes here
-  \end{frame}
+  \input{frame-title.tex}
+  \input{frame-somemath.tex}
 \end{document}
