--- a/wykresy.tex
+++ b/wykresy.tex
@@ -1,9 +1,26 @@
 \section{\scshape Wykresy}
 
-\subsection{Slajd 1}
-\begin{frame}{Slajd 1}
+\subsection{Hankin-Wright}
+\begin{frame}{Hankin-Wright}
+\includegraphics[width=\textwidth,height=0.8\textheight]{wykresy-hankin-wright}
 \end{frame}
 
-\subsection{Slajd 2}
-\begin{frame}{Slajd 2}
+\subsection{Seyfried}
+\begin{frame}{Seyfried}
+\includegraphics[width=\textwidth,height=0.8\textheight]{wykresy-seyfried}
+\end{frame}
+
+\subsection{Kuba}
+\begin{frame}{Kuba}
+\includegraphics[width=\textwidth,height=0.8\textheight]{wykresy-kuba}
+\end{frame}
+
+\subsection{Wiki}
+\begin{frame}{Wiki}
+\includegraphics[width=\textwidth,height=0.8\textheight]{wykresy-wiki}
+\end{frame}
+
+\subsection{Walidacja przepływu}
+\begin{frame}{Walidacja przepływu}
+\includegraphics[width=\textwidth,height=0.8\textheight]{wykresy-weidmann_valid}
 \end{frame}
