--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[xcolor=x11names,compress]{beamer}
 
 \usepackage{graphicx}
+\usepackage{epstopdf}
 \usepackage{tikz}
 \usepackage[polish]{babel}
 \usepackage[utf8]{inputenc}
