Add bottleneck pictures

--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,8 @@
 \usepackage{graphicx}
 \usepackage{epstopdf}
 \usepackage{tikz}
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage[polish]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
