--- a/wykresy.tex
+++ b/wykresy.tex
@@ -2,25 +2,43 @@
 
 \subsection{Hankin-Wright}
 \begin{frame}{Hankin-Wright}
-\includegraphics[width=\textwidth,height=0.8\textheight]{wykresy-hankin-wright}
+\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-hankin-wright}
 \end{frame}
 
 \subsection{Seyfried}
 \begin{frame}{Seyfried}
-\includegraphics[width=\textwidth,height=0.8\textheight]{wykresy-seyfried}
+\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-seyfried}
 \end{frame}
 
 \subsection{Kuba}
 \begin{frame}{Kuba}
-\includegraphics[width=\textwidth,height=0.8\textheight]{wykresy-kuba}
+\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-kuba}
 \end{frame}
 
 \subsection{Wiki}
 \begin{frame}{Wiki}
-\includegraphics[width=\textwidth,height=0.8\textheight]{wykresy-wiki}
+\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-wiki}
 \end{frame}
 
 \subsection{Walidacja przepływu}
 \begin{frame}{Walidacja przepływu}
-\includegraphics[width=\textwidth,height=0.8\textheight]{wykresy-weidmann_valid}
+\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-weidmann_valid}
+\end{frame}
+
+\subsection{Bottleneck}
+\begin{frame}{Bottleneck}
+
+\begin{figure}
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.9\linewidth]{obrazek-bottleneck}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.9\linewidth]{obrazek-bottleneck-real}
+\end{subfigure}
+\label{fig:test}
+\end{figure}
+
 \end{frame}
