Change slideshow structure

--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,14 @@
 \tableofcontents
 \end{frame}
 
-\input{matematyka.tex}
+\input{analiza.tex}
+\input{narzedzia.tex}
+\input{model.tex}
+\input{implementacja.tex}
+\input{walidacja.tex}
+\input{wnioski.tex}
+\input{perspektywy.tex}
+
 \input{wykresy.tex}
 
 \end{document}
