--- a/wykresy.tex
+++ b/wykresy.tex
@@ -42,3 +42,8 @@
 \end{figure}
 
 \end{frame}
+
+\subsection{Bottleneck validated}
+\begin{frame}{Bottleneck validated}
+\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-bottleneck_validated}
+\end{frame}
