Set final slideshow structure (how to repair ToC?)

--- a/analiza.tex
+++ b/analiza.tex
@@ -1,9 +1,9 @@
-\section{\scshape Analiza problemu}
+\section{\scshape Analiza}
 
-\subsection{Slajd 1}
-\begin{frame}{Slajd 1}
+\subsection{Zagadnienie ewakuacji tunelu}
+\begin{frame}{Zagadnienie ewakuacji tunelu}
 \end{frame}
 
-\subsection{Slajd 2}
-\begin{frame}{Slajd 2}
+\subsection{Studium problemu}
+\begin{frame}{Studium problemu}
 \end{frame}
