--- a/implementacja.tex
+++ b/implementacja.tex
@@ -1,9 +1,13 @@
-\section{\scshape Wyzwania implementacyjne}
+\section{\scshape Implementacja}
 
-\subsection{Slajd 1}
-\begin{frame}{Slajd 1}
+\subsection{Wyzwania związane z implementacją logiki ewakuowanego}
+\begin{frame}{Wyzwania związane z implementacją logiki ewakuowanego}
 \end{frame}
 
-\subsection{Slajd 2}
-\begin{frame}{Slajd 2}
+\subsection{Dynamiczna reakcja na zmiany temperatury}
+\begin{frame}{Dynamiczna reakcja na zmiany temperatury}
+\end{frame}
+
+\subsection{Warunki krytyczne --- stężenie CO}
+\begin{frame}{Warunki krytyczne --- stężenie CO}
 \end{frame}
