--- a/model.tex
+++ b/model.tex
@@ -1,9 +1,17 @@
-\section{\scshape Opis modelu}
+\section{\scshape Model}
 
-\subsection{Slajd 1}
-\begin{frame}{Slajd 1}
+\subsection{Opis modelu}
+\begin{frame}{Opis modelu}
 \end{frame}
 
-\subsection{Slajd 2}
-\begin{frame}{Slajd 2}
+\subsection{Teoria proksemiki}
+\begin{frame}{Teoria proksemiki}
+\end{frame}
+
+\subsection{Reprezentacja ewakuowanego}
+\begin{frame}{Reprezentacja ewakuowanego}
+\end{frame}
+
+\subsection{Funkcja kosztu}
+\begin{frame}{Funkcja kosztu}
 \end{frame}
