--- a/narzedzia.tex
+++ b/narzedzia.tex
@@ -1,9 +1,5 @@
-\section{\scshape Użyte narzędzia}
+\section{\scshape Narzędzia}
 
-\subsection{Slajd 1}
-\begin{frame}{Slajd 1}
-\end{frame}
-
-\subsection{Slajd 2}
-\begin{frame}{Slajd 2}
+\subsection{Użyte technologie i narzędzia}
+\begin{frame}{Użyte technologie i narzędzia}
 \end{frame}
