--- a/perspektywy.tex
+++ b/perspektywy.tex
@@ -1,9 +1,5 @@
 \section{\scshape Perspektywy}
 
-\subsection{Slajd 1}
-\begin{frame}{Slajd 1}
-\end{frame}
-
-\subsection{Slajd 2}
-\begin{frame}{Slajd 2}
+\subsection{Perspektywy --- framework}
+\begin{frame}{Perspektywy --- framework}
 \end{frame}
