--- a/walidacja.tex
+++ b/walidacja.tex
@@ -1,9 +1,9 @@
 \section{\scshape Walidacja}
 
-\subsection{Slajd 1}
-\begin{frame}{Slajd 1}
+\subsection{Diagramy fundamentalne przepływów --- Hankin \&{} Wright, Weidmann}
+\begin{frame}{Diagramy fundamentalne przepływów --- Hankin \&{} Wright, Weidmann}
 \end{frame}
 
-\subsection{Slajd 2}
-\begin{frame}{Slajd 2}
+\subsection{Wąskie gardła --- Seyfried et al.}
+\begin{frame}{Wąskie gardła --- Seyfried et al.}
 \end{frame}
