--- a/wnioski.tex
+++ b/wnioski.tex
@@ -1,9 +1,5 @@
 \section{\scshape Wnioski}
 
-\subsection{Slajd 1}
-\begin{frame}{Slajd 1}
-\end{frame}
-
-\subsection{Slajd 2}
-\begin{frame}{Slajd 2}
+\subsection{Wnioski}
+\begin{frame}{Wnioski}
 \end{frame}
