Fix TOC divisions

--- a/main.tex
+++ b/main.tex
@@ -60,7 +60,7 @@
 \titlepage
 \end{frame}
 
-\begin{frame}{Spis treści}
+\begin{frame}[allowframebreaks]{Spis treści}
 \tableofcontents
 \end{frame}
 
