--- a/analiza.tex
+++ b/analiza.tex
@@ -1,9 +1,35 @@
 \section{\scshape Analiza}
 
+% ------------------
+
 \subsection{Zagadnienie ewakuacji tunelu}
 \begin{frame}{Zagadnienie ewakuacji tunelu}
+
+\begin{enumerate}
+  \item Znaczenie praktyczne.
+  \item Szczególnie niebezpieczne warunki.
+  \item Możliwość wirtualnej analizy zagrożeń.
+\end{enumerate}
+
 \end{frame}
+
+% ------------------
 
 \subsection{Studium problemu}
 \begin{frame}{Studium problemu}
+
+\begin{enumerate}
+  \item Aspekt fizyczny:
+  \begin{itemize}
+    \item lokalizacja,
+    \item warunki krytyczne.
+  \end{itemize}
+  \item Charakterystyki psychologiczne i fizjologiczne:
+  \begin{itemize}
+    \item reprezentacja anatomii,
+    \item motoryka ewakuowanych,
+    \item reakcja na zagrożenie.
+  \end{itemize}
+\end{enumerate}
+
 \end{frame}
