Add "Tools" section

--- a/narzedzia.tex
+++ b/narzedzia.tex
@@ -2,4 +2,12 @@
 
 \subsection{Użyte technologie i narzędzia}
 \begin{frame}{Użyte technologie i narzędzia}
+
+\begin{enumerate}
+  \item Fire Dynamics Simulator 5.5.3.
+  \item Java Development Kit 7u21.
+  \item Java OpenGL.
+  \item JFreeChart 1.0.14.
+\end{enumerate}
+
 \end{frame}
