--- a/narzedzia.tex
+++ b/narzedzia.tex
@@ -6,8 +6,9 @@
 \begin{enumerate}
   \item Fire Dynamics Simulator 5.5.3.
   \item Java Development Kit 7u21.
-  \item Java OpenGL.
+  \item Java OpenGL 2.0-rc11.
   \item JFreeChart 1.0.14.
+  \item Eclipse Metrics Plugin (State of Flow) 3.14.1.201104282140.
 \end{enumerate}
 
 \end{frame}
