--- a/model.tex
+++ b/model.tex
@@ -2,6 +2,13 @@
 
 \subsection{Opis modelu}
 \begin{frame}{Opis modelu}
+	\begin{itemize}
+	\item Dane o propagacji dymu generowane przez FDS
+	\item Symulacja dyskretna
+	\item Automat komórkowy wykorzystujący sąsiedztwo Moore'a
+	\item Dynamiczne i statyczne pola potencjału
+	\item Wykorzystanie proksemiki
+	\end{itemize}
 \end{frame}
 
 \subsection{Teoria proksemiki}
