--- a/implementacja.tex
+++ b/implementacja.tex
@@ -1,12 +1,29 @@
 \section{\scshape Implementacja}
 
+% ------------------------
+
 \subsection{Wyzwania związane z implementacją logiki ewakuowanego}
 \begin{frame}{Wyzwania związane z implementacją logiki ewakuowanego}
+  \begin{enumerate}
+    \item Dynamiczna reakcja na zagrożenie.
+    \item Warunki krytyczne.
+    \item Wybór wyjścia ewakuacyjnego.
+  \end{enumerate}
 \end{frame}
+
+% ------------------------
 
 \subsection{Dynamiczna reakcja na zmiany temperatury}
 \begin{frame}{Dynamiczna reakcja na zmiany temperatury}
+  \begin{figure}
+    \centering
+    \includegraphics[height=0.6\textheight]{wykresy-kuba}
+  \end{figure}
+  $$\xi = \alpha \cdot B^2$$
+  $\alpha = 0.3$, $B = 1.1$
 \end{frame}
+
+% ------------------------
 
 \subsection{Warunki krytyczne --- stężenie CO}
 \begin{frame}{Warunki krytyczne --- stężenie CO}
