Continue with "Implementation" section

--- a/implementacja.tex
+++ b/implementacja.tex
@@ -27,4 +27,14 @@
 
 \subsection{Warunki krytyczne --- stężenie CO}
 \begin{frame}{Warunki krytyczne --- stężenie CO}
+  \begin{figure}
+    \centering
+    \includegraphics[height=0.6\textheight]{wykresy-wiki}
+  \end{figure}
+  $$HbCO_i = HbCO_{i-1} + HbCO_L \frac{CO_i}{CO_L}$$
+  $HbCO_i$ -- aktualne stężenie karboksyhemoglobiny;
+  $HbCO_{i-1}$ -- stężenie karboksyhemoglobinyw poprzedniej iteracji;
+  $HbCO_L$ -- letalne stężenie karboksyhemoglobiny;
+  $CO_i$ -- aktualne stężenieCO w powietrzu;
+  $CO_L$ -- letalne stężenieCOw powietrzu.
 \end{frame}
