--- a/model.tex
+++ b/model.tex
@@ -6,7 +6,7 @@
 	\item Dane o propagacji dymu generowane przez FDS
 	\item Symulacja dyskretna
 	\item Automat komórkowy wykorzystujący sąsiedztwo Moore'a
-	\includegraphics[width=	 	 			  textwidth,height=0.8\textheight,keepaspectratio]{moore}
+	\includegraphics[keepaspectratio=true, scale=0.75]{moore}
 	\item Dynamiczne i statyczne pola potencjału
 	\item Wykorzystanie proksemiki
 	\end{itemize}
