--- a/walidacja.tex
+++ b/walidacja.tex
@@ -2,8 +2,38 @@
 
 \subsection{Diagramy fundamentalne przepływów --- Hankin \&{} Wright, Weidmann}
 \begin{frame}{Diagramy fundamentalne przepływów --- Hankin \&{} Wright, Weidmann}
+  \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-hankin-wright}
 \end{frame}
 
 \subsection{Wąskie gardła --- Seyfried et al.}
 \begin{frame}{Wąskie gardła --- Seyfried et al.}
+  \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-seyfried}
+\end{frame}
+
+\subsection{Walidacja przepływu}
+\begin{frame}{Walidacja przepływu}
+\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-weidmann_valid}
+\end{frame}
+
+\subsection{Bottleneck}
+\begin{frame}{Bottleneck}
+
+\begin{figure}
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.9\linewidth]{obrazek-bottleneck}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.9\linewidth]{obrazek-bottleneck-real}
+\end{subfigure}
+\label{fig:test}
+\end{figure}
+
+\end{frame}
+
+\subsection{Bottleneck validated}
+\begin{frame}{Bottleneck validated}
+\includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-bottleneck_validated}
 \end{frame}
