--- a/wnioski.tex
+++ b/wnioski.tex
@@ -2,4 +2,17 @@
 
 \subsection{Wnioski}
 \begin{frame}{Wnioski}
+  \begin{itemize}
+    \item Zalety:
+    \begin{enumerate}
+      \item Wydajna symulacja dynamiki grup uciekających.
+      \item Jasno zdefiniowana funkcja kosztu.
+      \item Przejrzystość implementacji modelu.
+    \end{enumerate}
+    \item Wady:
+    \begin{enumerate}
+      \item Trudność w odzwierciedleniu charakterystyk socjologicznych.
+      \item Skomplikowana reprezentacja antycypacji zmian.
+    \end{enumerate}
+  \end{itemize}
 \end{frame}
