--- a/model.tex
+++ b/model.tex
@@ -6,7 +6,9 @@
 	\item Dane o propagacji dymu generowane przez FDS
 	\item Symulacja dyskretna
 	\item Automat komórkowy wykorzystujący sąsiedztwo Moore'a
-	\includegraphics[keepaspectratio=true, scale=0.75]{moore}
+	\begin{center}	
+	\includegraphics[keepaspectratio=true, scale=0.5]{moore}
+	\end{center}
 	\item Dynamiczne i statyczne pola potencjału
 	\item Wykorzystanie proksemiki
 	\end{itemize}
@@ -14,6 +16,10 @@
 
 \subsection{Teoria proksemiki}
 \begin{frame}{Teoria proksemiki}
+ \begin{itemize}
+ 	\item Reprezentacja pieszego przez elipsę
+ 	\item Cztery możliwe orientacje
+ 	\item Maksymalna powierzchnia intersekcji
 \end{frame}
 
 \subsection{Reprezentacja ewakuowanego}
