--- a/model.tex
+++ b/model.tex
@@ -20,6 +20,10 @@
  	\item Reprezentacja pieszego przez elipsę
  	\item Cztery możliwe orientacje
  	\item Maksymalna powierzchnia intersekcji
+ 	\begin{center}	
+	\includegraphics[keepaspectratio=true]{proxemics}
+	\end{center}	
+ \end{itemize}
 \end{frame}
 
 \subsection{Reprezentacja ewakuowanego}
