--- a/perspektywy.tex
+++ b/perspektywy.tex
@@ -2,4 +2,11 @@
 
 \subsection{Perspektywy --- framework}
 \begin{frame}{Perspektywy --- framework}
+  \begin{itemize}
+    \item Modularność.
+    \item Dodanie modeli ciągłych.
+    % TODO: screen?
+    \item Porównanie modeli symulacyjnych pod względem wydajności i wyników.
+    \item Automatyzacja procesów walidacji.
+  \end{itemize}
 \end{frame}
