--- a/model.tex
+++ b/model.tex
@@ -21,7 +21,7 @@
  	\item Cztery możliwe orientacje
  	\item Maksymalna powierzchnia intersekcji
  	\begin{center}	
-	\includegraphics[keepaspectratio=true]{proxemics}
+	\includegraphics[keepaspectratio=true, scale = 0.5]{proxemics}
 	\end{center}	
  \end{itemize}
 \end{frame}
