Add egress time

--- a/model.tex
+++ b/model.tex
@@ -28,6 +28,19 @@
 
 \subsection{Reprezentacja ewakuowanego}
 \begin{frame}{Reprezentacja ewakuowanego}
+\begin{itemize}
+	\item Charakterystyka fizjologiczna
+	\item Trzy możliwe sposoby poruszania się
+	\item Wrażliwość na zmiany otoczenia
+	\item Czas reakcji
+\end{itemize}
+\end{frame}
+
+\subsection{Czas reakcji}
+\begin{frame}{Czas reakcji}
+\begin{center}	
+	\includegraphics[keepaspectratio=true]{egress_time}
+	\end{center}
 \end{frame}
 
 \subsection{Funkcja kosztu}
