Improve "Model" section

--- a/implementacja.tex
+++ b/implementacja.tex
@@ -19,7 +19,7 @@
     \centering
     \includegraphics[height=0.6\textheight]{wykresy-kuba}
   \end{figure}
-  $$\xi = \alpha \cdot B^2$$
+  $$\xi = \alpha \cdot B^T$$
   $\alpha = 0.3$, $B = 1.1$
 \end{frame}
 
