--- a/model.tex
+++ b/model.tex
@@ -39,10 +39,21 @@
 \subsection{Czas reakcji}
 \begin{frame}{Czas reakcji}
 \begin{center}	
-	\includegraphics[keepaspectratio=true]{egress_time}
-	\end{center}
+	\includegraphics[]{egress_time}
+\end{center}
 \end{frame}
 
 \subsection{Funkcja kosztu}
 \begin{frame}{Funkcja kosztu}
+\begin{center}
+$q(F_{i,j}) = \alpha * S_{i,j} + \beta * D_{i,j}$
+\end{center}
+
+\begin{center}
+$D{i,j} = dist + \gamma * \xi$
+\end{center}
+
+\begin{center}
+$\xi = \alpha \cdot B^T$
+\end{center}
 \end{frame}
