--- a/analiza.tex
+++ b/analiza.tex
@@ -9,6 +9,7 @@
   \item Znaczenie praktyczne.
   \item Szczególnie niebezpieczne warunki.
   \item Możliwość wirtualnej analizy zagrożeń.
+  \includegraphics[scale = 0.27]{mont_blanc}
 \end{enumerate}
 
 \end{frame}
@@ -26,7 +27,7 @@
   \end{itemize}
   \item Charakterystyki psychologiczne i fizjologiczne:
   \begin{itemize}
-    \item reprezentacja anatomii,
+    \item statystki World Health Organization,
     \item motoryka ewakuowanych,
     \item reakcja na zagrożenie.
   \end{itemize}
