--- a/implementacja.tex
+++ b/implementacja.tex
@@ -19,8 +19,12 @@
     \centering
     \includegraphics[height=0.6\textheight]{wykresy-kuba}
   \end{figure}
+  \begin{center}
   $$\xi = \alpha \cdot B^T$$
+  \end{center}
+  \begin{center}
   $\alpha = 0.3$, $B = 1.1$
+  \end{center}
 \end{frame}
 
 % ------------------------
@@ -32,9 +36,4 @@
     \includegraphics[height=0.6\textheight]{wykresy-wiki}
   \end{figure}
   $$HbCO_i = HbCO_{i-1} + HbCO_L \frac{CO_i}{CO_L}$$
-  $HbCO_i$ -- aktualne stężenie karboksyhemoglobiny;
-  $HbCO_{i-1}$ -- stężenie karboksyhemoglobinyw poprzedniej iteracji;
-  $HbCO_L$ -- letalne stężenie karboksyhemoglobiny;
-  $CO_i$ -- aktualne stężenieCO w powietrzu;
-  $CO_L$ -- letalne stężenieCOw powietrzu.
 \end{frame}
