--- a/main.tex
+++ b/main.tex
@@ -59,10 +59,19 @@
 }
 \titlepage
 \end{frame}
-
-\begin{frame}[allowframebreaks]{Spis treści}
-\tableofcontents
+\subsection{Spis treści}
+\begin{frame}{Spis treści}
+\begin{enumerate}
+	\item Analiza zagadnienia
+	\item Użyte narzędzia
+	\item Opis modelu
+	\item Implementacja
+	\item Walidacja
+	\item Wnioski
+	\item Perspektywy rozwoju projektu
+\end{enumerate}
 \end{frame}
+
 
 \input{analiza.tex}
 \input{narzedzia.tex}
