--- a/model.tex
+++ b/model.tex
@@ -3,23 +3,23 @@
 \subsection{Opis modelu}
 \begin{frame}{Opis modelu}
 	\begin{itemize}
-	\item Dane o propagacji dymu generowane przez FDS
-	\item Symulacja dyskretna
-	\item Automat komórkowy wykorzystujący sąsiedztwo Moore'a
+	\item Dane o propagacji dymu generowane przez FDS.
+	\item Symulacja dyskretna.
+	\item Automat komórkowy wykorzystujący sąsiedztwo. Moore'a
 	\begin{center}	
 	\includegraphics[keepaspectratio=true, scale=0.5]{moore}
 	\end{center}
-	\item Dynamiczne i statyczne pola potencjału
-	\item Wykorzystanie proksemiki
+	\item Dynamiczne i statyczne pola potencjału.
+	\item Wykorzystanie proksemiki.
 	\end{itemize}
 \end{frame}
 
 \subsection{Teoria proksemiki}
 \begin{frame}{Teoria proksemiki}
  \begin{itemize}
- 	\item Reprezentacja pieszego przez elipsę
- 	\item Cztery możliwe orientacje
- 	\item Maksymalna powierzchnia intersekcji
+ 	\item Reprezentacja pieszego przez elipsę.
+ 	\item Cztery możliwe orientacje.
+ 	\item Maksymalna powierzchnia intersekcji.
  	\begin{center}	
 	\includegraphics[keepaspectratio=true, scale = 0.5]{proxemics}
 	\end{center}	
@@ -29,17 +29,17 @@
 \subsection{Reprezentacja ewakuowanego}
 \begin{frame}{Reprezentacja ewakuowanego}
 \begin{itemize}
-	\item Charakterystyka fizjologiczna
-	\item Trzy możliwe sposoby poruszania się
-	\item Wrażliwość na zmiany otoczenia
-	\item Czas reakcji
+	\item Charakterystyka fizjologiczna.
+	\item Trzy możliwe sposoby poruszania się.
+	\item Wrażliwość na zmiany otoczenia.
+	\item Czas reakcji.
 \end{itemize}
 \end{frame}
 
 \subsection{Czas reakcji}
 \begin{frame}{Czas reakcji}
 \begin{center}	
-	\includegraphics[]{egress_time}
+	\includegraphics[scale=0.9]{egress_time}
 \end{center}
 \end{frame}
 
