--- a/walidacja.tex
+++ b/walidacja.tex
@@ -1,13 +1,16 @@
 \section{\scshape Walidacja}
 
-\subsection{Diagramy fundamentalne przepływów --- Hankin \&{} Wright, Weidmann}
-\begin{frame}{Diagramy fundamentalne przepływów --- Hankin \&{} Wright, Weidmann}
-  \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-hankin-wright}
-\end{frame}
-
-\subsection{Wąskie gardła --- Seyfried et al.}
-\begin{frame}{Wąskie gardła --- Seyfried et al.}
-  \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-seyfried}
+\subsection{Walidacja}
+\begin{frame}{Walidacja}
+\begin{itemize}
+\item Diagramy fundamentalne przepływów
+\item Wąskie gardła (bottlenecks)
+\item Dostępne nagrania
+\end{itemize}
+\begin{center}
+\includegraphics[scale=0.3]{obrazek-bottleneck}
+\includegraphics[scale=0.43]{obrazek-bottleneck-real}
+\end{center}
 \end{frame}
 
 \subsection{Walidacja przepływu}
@@ -15,25 +18,7 @@
 \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-weidmann_valid}
 \end{frame}
 
-\subsection{Bottleneck}
-\begin{frame}{Bottleneck}
-
-\begin{figure}
-\centering
-\begin{subfigure}{.5\textwidth}
-  \centering
-  \includegraphics[width=.9\linewidth]{obrazek-bottleneck}
-\end{subfigure}%
-\begin{subfigure}{.5\textwidth}
-  \centering
-  \includegraphics[width=.9\linewidth]{obrazek-bottleneck-real}
-\end{subfigure}
-\label{fig:test}
-\end{figure}
-
-\end{frame}
-
-\subsection{Bottleneck validated}
-\begin{frame}{Bottleneck validated}
+\subsection{Wąskie gardła}
+\begin{frame}{Wąskie gardła}
 \includegraphics[width=\textwidth,height=0.8\textheight,keepaspectratio]{wykresy-bottleneck_validated}
 \end{frame}
